feat: Agregar dependencias para manejo de correos y documentación de Swagger